--- a/src/index.html
+++ b/src/index.html
@@ -155,6 +155,12 @@
                 </svg>
                 <span>LINKROLL</span>
               </a>
+              <a href="/misc" class="nav-item">
+                <svg class="nav-square fill-zinc-600/60" viewBox="0 0 10 10">
+                  <rect width="10" height="10" rx="2" />
+                </svg>
+                <span>MISC</span>
+              </a>
             </nav>
           </div>
           <div class="font-serif md:my-6 md:text-lg">
