--- a/src/projects/index.html
+++ b/src/projects/index.html
@@ -57,7 +57,7 @@
               <a href="/now">
                 <span class="nav-item-aux decoration-yellow-400/70">NOW</span>
               </a>
-              <div class="w-full text-right sm:m-0 sm:w-auto sm:text-left">
+              <div class="ml-auto flex gap-4 sm:m-0 sm:w-auto sm:text-left">
                 <a href="/linkroll">
                   <span class="nav-item-aux decoration-red-400/70">LINKROLL</span>
                 </a>
