shortened link/miscellaneous. gives better visual flow down vertical.

--- a/public/index.html
+++ b/public/index.html
@@ -150,13 +150,13 @@
                 <svg class="nav-square fill-red-400/60" viewBox="0 0 10 10">
                   <rect width="10" height="10" rx="2"></rect>
                 </svg>
-                <span>LINKROLL</span>
+                <span>LINKS</span>
               </a>
               <a href="/misc" class="nav-item">
                 <svg class="nav-square fill-zinc-600/60" viewBox="0 0 10 10">
                   <rect width="10" height="10" rx="2"></rect>
                 </svg>
-                <span>MISCELLANEOUS</span>
+                <span>MISC</span>
               </a>
             </nav>
           </div>
