removed merriweather and ibm plex sans dependencies.

--- a/public/index.html
+++ b/public/index.html
@@ -3,20 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="preload"
-      href="/fonts/plex-sans/ibm-plex-sans-v21-latin-regular.woff2"
-      as="font"
-      type="font/woff2"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="preload"
-      href="/fonts/merriweather/merriweather-v31-latin-regular.woff2"
-      as="font"
-      type="font/woff2"
-      crossorigin="anonymous"
-    />
     <link rel="stylesheet" href="/assets/styles.css" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <title>Farhan Sanukri</title>
@@ -160,9 +146,9 @@
               </a>
             </nav>
           </div>
-          <div class="font-serif md:my-6 md:text-lg">
+          <div class="styled-serif text-[18.5px] md:my-6 md:text-xl">
             <p>Hi, I'm Farhan!</p>
-            <p class="my-5">
+            <p class="my-4">
               I'm a computer science student pursuing a double major in CS and Math at the
               <strong>University of North Carolina at Chapel Hill</strong>. You can find my resume
               <a
@@ -171,24 +157,24 @@
                 >here</a
               >.
             </p>
-            <p class="my-5">
+            <p class="my-4">
               My interests are in distributed systems, compiler optimizations, and database design.
               Outside of that, I'm passionate about full-stack development and creating
               <span class="underline">scalable, intuitive digital experiences.</span>
             </p>
-            <p class="my-5">
+            <p class="my-4">
               I'm currently building the iOS app for <strong>PORCH Communities</strong> to make
               large-scale food donation easier and more user-friendly. Previously, I researched
               meniscus-tear image classification at <strong>Duke University</strong>.
             </p>
-            <p class="my-5">
+            <p class="my-4">
               When I'm not playing Hay Day or spending time outside, I also like to write code (and
               other things) sometimes; my
               <a class="text-blue-500 underline underline-offset-2" href="/blog">blog</a> and
               <a class="text-blue-500 underline underline-offset-2" href="/projects">projects</a>
               are where those live.
             </p>
-            <p class="my-5 text-base">
+            <p class="my-5">
               Feel free to get in touch with me! My email is <br /><em
                 class="underline underline-offset-2"
                 >farhan.sanukri24 [at] gmail [dot] com.</em
