--- a/src/now/index.html
+++ b/src/now/index.html
@@ -3,27 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="preload"
-      href="/fonts/plex-sans/ibm-plex-sans-v21-latin-regular.woff2"
-      as="font"
-      type="font/woff2"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="preload"
-      href="/fonts/plex-sans/ibm-plex-sans-v21-latin-700.woff2"
-      as="font"
-      type="font/woff2"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="preload"
-      href="/fonts/merriweather/merriweather-v31-latin-regular.woff2"
-      as="font"
-      type="font/woff2"
-      crossorigin="anonymous"
-    />
     <link rel="stylesheet" href="/assets/styles.css" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <title>Now</title>
@@ -103,7 +82,7 @@
 
           <div class="pl-1">
             <h2 class="now-date-header">May 07, 2025</h2>
-            <div class="font-serif">
+            <div class="styled-serif text-[18.5px]">
               <p class="my-4">
                 I'm just about to wrap up with final exams! I'll be in Durham, NC over the summer
                 interning at
