--- a/src/projects/index.html
+++ b/src/projects/index.html
@@ -3,27 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="preload"
-      href="/fonts/plex-sans/ibm-plex-sans-v21-latin-regular.woff2"
-      as="font"
-      type="font/woff2"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="preload"
-      href="/fonts/plex-sans/ibm-plex-sans-v21-latin-700.woff2"
-      as="font"
-      type="font/woff2"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="preload"
-      href="/fonts/merriweather/merriweather-v31-latin-regular.woff2"
-      as="font"
-      type="font/woff2"
-      crossorigin="anonymous"
-    />
     <link rel="stylesheet" href="/assets/styles.css" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <title>Projects</title>
@@ -89,14 +68,14 @@
             </nav>
           </div>
           <div class="mb-8">
-            <div class="page-title">
-              <h1>PROJECTS</h1>
+		<div class="page-title"> 
+              <h1 class="font-[Helvetica Neue]">PROJECTS</h1>
             </div>
             <p class="text-slate-600">fun experiments; sometimes accompanied by notes</p>
           </div>
 
           <div class="pl-1 md:flex">
-            <ul class="flex flex-col gap-6">
+            <ul class="flex flex-col gap-6 text-[16px] styled-sans">
               <li>
                 <a href="https://crates.io/crates/spleen-font" class="project-link"
                   >spleen-font-rs</a
