--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -68,14 +68,14 @@
             </nav>
           </div>
           <div class="mb-8">
-		<div class="page-title"> 
+            <div class="page-title">
               <h1 class="font-[Helvetica Neue]">PROJECTS</h1>
             </div>
             <p class="text-slate-600">fun experiments; sometimes accompanied by notes</p>
           </div>
 
           <div class="pl-1 md:flex">
-            <ul class="flex flex-col gap-6 text-[16px] styled-sans">
+            <ul class="styled-sans flex flex-col gap-6 text-[16px]">
               <li>
                 <a href="https://crates.io/crates/spleen-font" class="project-link"
                   >spleen-font-rs</a
