--- a/public/now/index.html
+++ b/public/now/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/assets/styles.css" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+	<link rel="icon" type="image/png" href="/assets/favicon-96x96.png" sizes="96x96" />
+	<link rel="icon" type="image/svg+xml" href="/assets/favicon.svg" />
+	<link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png" />
+	<link rel="preload" href="./assets/fonts/manrope-v15-latin-regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+	<link rel="preload" href="./assets/fonts/manrope-v15-latin-700.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+	<meta name="apple-mobile-web-app-title" content="Farhan S" />
+	<link rel="manifest" href="/assets/site.webmanifest" />
     <title>Now</title>
   </head>
   <body>
@@ -82,7 +88,7 @@
 
           <div class="pl-1">
             <h2 class="now-date-header">May 07, 2025</h2>
-            <div class="styled-serif text-[18.5px]">
+            <div class="">
               <p class="my-4">
                 I'm just about to wrap up with final exams! I'll be in Durham, NC over the summer
                 interning at
