--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,6 @@
 	<link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png" />
 	<link rel="preload" href="./assets/fonts/manrope-v15-latin-regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 	<link rel="preload" href="./assets/fonts/manrope-v15-latin-700.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-	<link rel="preload" href="./assets/fonts/manrope-v15-latin-600.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 	<meta name="apple-mobile-web-app-title" content="Farhan S" />
 	<link rel="manifest" href="/assets/site.webmanifest" />
     <title>Farhan Sanukri</title>
@@ -56,7 +55,7 @@
               </a>
               <div class="xs:mb-0 mt-2 mb-4 flex flex-col gap-0 md:mt-0">
                 <h1
-                  class="xs:mt-0 mt-2 text-[1.45em] leading-none font-semibold whitespace-nowrap sm:whitespace-normal md:text-3xl"
+                  class="xs:mt-0 mt-2 text-[1.45em] leading-none font-bold whitespace-nowrap sm:whitespace-normal md:text-3xl"
                 >
                   FARHAN SANUKRI
                 </h1>
@@ -119,7 +118,7 @@
               </div>
             </div>
 
-            <nav class="justify-end text-[1.1em] flex-wrap font-semibold md:font-medium md:ml-0 gap-x-2 md:mt-1 flex md:flex-col md:gap-0 border-b-4 md:border-none">
+            <nav class="justify-end text-[1.1em] flex-wrap font-bold md:font-medium md:ml-0 gap-x-2 md:mt-1 flex md:flex-col md:gap-0 border-b-4 md:border-none">
               <a href="/blog" class="nav-item slash-green">
                 <svg class="nav-square fill-green-600/60" viewBox="0 0 10 10">
                   <rect width="10" height="10" rx="2"></rect>
