--- a/public/now/index.html
+++ b/public/now/index.html
@@ -7,8 +7,8 @@
 	<link rel="icon" type="image/png" href="/assets/favicon-96x96.png" sizes="96x96" />
 	<link rel="icon" type="image/svg+xml" href="/assets/favicon.svg" />
 	<link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png" />
-	<link rel="preload" href="./assets/fonts/manrope-v15-latin-regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-	<link rel="preload" href="./assets/fonts/manrope-v15-latin-700.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+	<link rel="preload" href="../assets/fonts/manrope-v15-latin-regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+	<link rel="preload" href="../assets/fonts/manrope-v15-latin-700.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 	<meta name="apple-mobile-web-app-title" content="Farhan S" />
 	<link rel="manifest" href="/assets/site.webmanifest" />
     <title>Now</title>
