--- a/src/index.html
+++ b/src/index.html
@@ -118,7 +118,7 @@
               </div>
             </div>
 
-            <nav class="justify-end text-[1.1em] flex-wrap font-bold md:font-medium md:ml-0 gap-x-2 md:mt-1 flex md:flex-col md:gap-0 border-b-4 md:border-none">
+            <nav class="justify-end text-[1.1em] flex-wrap font-bold md:font-medium md:ml-0 gap-x-2 md:mt-1 flex md:flex-col md:gap-0 border-b-3 md:border-none">
               <a href="/blog" class="nav-item slash-green">
                 <svg class="nav-square fill-green-600/60" viewBox="0 0 10 10">
                   <rect width="10" height="10" rx="2"></rect>
@@ -151,7 +151,7 @@
               </a>
             </nav>
           </div>
-          <div class="md:my-6 text-[18px] md:text-xl">
+          <div class="md:my-6 md:text-xl">
             <p>Hi, I'm Farhan!</p>
             <p class="my-4">
               I'm a computer science student pursuing a double major in CS and Math at the
@@ -180,7 +180,7 @@
               are where those live.
             </p>
             <p class="my-5">
-              Feel free to get in touch with me! My email is <br /><em
+              Feel free to get in touch! My email is <br /><em
                 class="underline underline-offset-2"
                 >farhan.sanukri24 [at] gmail [dot] com.</em
               >
