--- a/public/404.html
+++ b/public/404.html
@@ -6,7 +6,7 @@
 		<title>404!</title>
 	</head>
 	<body>
-		<h1>whoops! wrong spot hehe :) <a href="/">go back home?</a></p>
+		<h1>whoops! wrong spot hehe :) <a href="/">go back home?</a></h1>
 	</body>
 </html>
 
