--- a/src/index.html
+++ b/src/index.html
@@ -151,7 +151,7 @@
               </a>
             </nav>
           </div>
-          <div class="md:my-6 md:text-xl">
+          <div class="md:my-6 md:text-xl stagger">
             <p>Hi, I'm Farhan!</p>
             <p class="my-4">
               I'm a computer science student pursuing a double major in CS and Math at the
@@ -167,7 +167,7 @@
               Outside of that, I'm passionate about full-stack development and creating
               <span class="underline">scalable, intuitive digital experiences.</span>
             </p>
-            <p class="my-4">
+            <p class="my-4"
               I'm currently building the iOS app for <strong>PORCH Communities</strong> to make
               large-scale food donation easier and more user-friendly. Previously, I researched
               meniscus-tear image classification at <strong>Duke University</strong>.
