--- a/src/index.html
+++ b/src/index.html
@@ -167,7 +167,7 @@
               Outside of that, I'm passionate about full-stack development and creating
               <span class="underline">scalable, intuitive digital experiences.</span>
             </p>
-            <p class="my-4"
+			<p class="my-4">
               I'm currently building the iOS app for <strong>PORCH Communities</strong> to make
               large-scale food donation easier and more user-friendly. Previously, I researched
               meniscus-tear image classification at <strong>Duke University</strong>.
