--- a/public/404.html
+++ b/public/404.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>404!</title>
-	</head>
-	<body>
-		<h1>whoops! wrong spot hehe :) <a href="/">go back home?</a></h1>
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>404!</title>
+  </head>
+  <body>
+    <h1>whoops! wrong spot hehe :) <a href="/">go back home?</a></h1>
+  </body>
 </html>
-
