--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/assets/styles.css" />
-	<link rel="icon" type="image/png" href="/assets/favicon-96x96.png" sizes="96x96" />
-	<link rel="icon" type="image/svg+xml" href="/assets/favicon.svg" />
-	<link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png" />
-	<link rel="preload" href="./assets/fonts/manrope-v15-latin-regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-	<link rel="preload" href="./assets/fonts/manrope-v15-latin-700.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-	<meta name="apple-mobile-web-app-title" content="Farhan S" />
-	<link rel="manifest" href="/assets/site.webmanifest" />
+    <link rel="icon" type="image/png" href="/assets/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png" />
+    <link
+      rel="preload"
+      href="./assets/fonts/manrope-v15-latin-regular.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preload"
+      href="./assets/fonts/manrope-v15-latin-700.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
+    <meta name="apple-mobile-web-app-title" content="Farhan S" />
+    <link rel="manifest" href="/assets/site.webmanifest" />
     <title>Farhan Sanukri</title>
   </head>
   <body>
@@ -118,7 +130,9 @@
               </div>
             </div>
 
-            <nav class="justify-end text-[1.1em] flex-wrap font-bold md:font-medium md:ml-0 gap-x-2 md:mt-1 flex md:flex-col md:gap-0 border-b-3 md:border-none">
+            <nav
+              class="flex flex-wrap justify-end gap-x-2 border-b-3 text-[1.1em] font-bold md:mt-1 md:ml-0 md:flex-col md:gap-0 md:border-none md:font-medium"
+            >
               <a href="/blog" class="nav-item slash-green">
                 <svg class="nav-square fill-green-600/60" viewBox="0 0 10 10">
                   <rect width="10" height="10" rx="2"></rect>
@@ -151,7 +165,7 @@
               </a>
             </nav>
           </div>
-          <div class="md:my-6 md:text-xl stagger">
+          <div class="stagger md:my-6 md:text-xl">
             <p>Hi, I'm Farhan!</p>
             <p class="my-4">
               I'm a computer science student pursuing a double major in CS and Math at the
@@ -167,7 +181,7 @@
               Outside of that, I'm passionate about full-stack development and creating
               <span class="underline">scalable, intuitive digital experiences.</span>
             </p>
-			<p class="my-4">
+            <p class="my-4">
               I'm currently building the iOS app for <strong>PORCH Communities</strong> to make
               large-scale food donation easier and more user-friendly. Previously, I researched
               meniscus-tear image classification at <strong>Duke University</strong>.
@@ -180,8 +194,7 @@
               are where those live.
             </p>
             <p class="my-5">
-              Feel free to get in touch! My email is <br /><em
-                class="underline underline-offset-2"
+              Feel free to get in touch! My email is <br /><em class="underline underline-offset-2"
                 >farhan.sanukri24 [at] gmail [dot] com.</em
               >
             </p>
