--- a/src/projects/index.html
+++ b/src/projects/index.html
@@ -4,13 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/assets/styles.css" />
-	<link rel="icon" type="image/png" href="/assets/favicon-96x96.png" sizes="96x96" />
-	<link rel="icon" type="image/svg+xml" href="/assets/favicon.svg" />
-	<link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png" />
-	<link rel="preload" href="../assets/fonts/manrope-v15-latin-regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-	<link rel="preload" href="../assets/fonts/manrope-v15-latin-700.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-	<meta name="apple-mobile-web-app-title" content="Farhan S" />
-	<link rel="manifest" href="/assets/site.webmanifest" />
+    <link rel="icon" type="image/png" href="/assets/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png" />
+    <link
+      rel="preload"
+      href="../assets/fonts/manrope-v15-latin-regular.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preload"
+      href="../assets/fonts/manrope-v15-latin-700.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
+    <meta name="apple-mobile-web-app-title" content="Farhan S" />
+    <link rel="manifest" href="/assets/site.webmanifest" />
     <title>Projects</title>
   </head>
   <body>
@@ -87,8 +99,8 @@
                   >spleen-font-rs</a
                 >
                 <p>
-                  PSF1/2 bitmap font renderer in no_std Rust. Built for my x86-64 operating system
-                  and published on crates.io as a separate library. Bundles the
+                  PSF1/2 bitmap font parser in no_std Rust. Built for my x86-64 operating system and
+                  published on crates.io as a separate library. Bundles the
                   <a
                     href="https://github.com/fcambus/spleen"
                     class="text-blue-500 underline decoration-blue-500"
