tidied up some css with links

--- a/public/index.html
+++ b/public/index.html
@@ -170,11 +170,7 @@
             <p class="my-4">
               I'm a computer science student pursuing a double major in CS and Math at the
               <strong>University of North Carolina at Chapel Hill</strong>. You can find my resume
-              <a
-                class="text-blue-500 underline underline-offset-2"
-                href="assets/farhan_sanukri_resume.pdf"
-                >here</a
-              >.
+              <a class="link" href="assets/farhan_sanukri_resume.pdf">here</a>.
             </p>
             <p class="my-4">
               My interests are in distributed systems, compiler optimizations, and database design.
@@ -189,8 +185,8 @@
             <p class="my-4">
               When I'm not playing Hay Day or spending time outside, I also like to write code (and
               other things) sometimes; my
-              <a class="text-blue-500 underline underline-offset-2" href="/blog">blog</a> and
-              <a class="text-blue-500 underline underline-offset-2" href="/projects">projects</a>
+              <a class="link" href="/blog">blog</a> and
+              <a class="link" href="/projects">projects</a>
               are where those live.
             </p>
             <p class="my-5">
