--- a/src/projects/index.html
+++ b/src/projects/index.html
@@ -87,7 +87,7 @@
           </div>
           <div class="mb-8">
             <div class="page-title">
-              <h1 class="font-[Helvetica Neue]">PROJECTS</h1>
+              <h1>PROJECTS</h1>
             </div>
             <p class="text-slate-600">fun experiments; sometimes accompanied by notes</p>
           </div>
