--- a/public/linkroll/index.html
+++ b/public/linkroll/index.html
@@ -29,12 +29,12 @@
     <div class="page-shell">
       <div>
         <div class="main-col">
-          <div class="mb-4 flex flex-1 items-center justify-between pl-1">
-            <a href="/" class="flex flex-col items-center">
+                    <div class="mb-4 flex sm:flex-row flex-col items-center justify-between">
+            <a href="/" class="flex gap-2 items-center mb-1">
               <svg
                 viewBox="0 0 100 100"
                 xmlns="http://www.w3.org/2000/svg"
-                class="h-[44px] w-[44px]"
+                class="h-[32px] w-[32px]"
               >
                 <defs>
                   <filter id="noise" x="-30%" y="-30%" width="160%" height="160%">
@@ -63,33 +63,32 @@
                   <circle cx="50" cy="50" r="10" class="fill-red-300" />
                 </g>
               </svg>
-              <p class="font-bold italic">farhan.sh</p>
+			<p class="text-2xl font-bold italic">farhan.sh</p>
             </a>
             <nav class="nav-header">
               <a href="/blog">
                 <span class="nav-item-aux decoration-green-600/60">BLOG</span>
               </a>
               <a href="/projects">
-                <span class="nav-item-aux decoration-lime-500/60">PROJECTS</span>
+                <span class="nav-item-aux decoration-amber-500/60">PROJECTS</span>
               </a>
-              <a href="/now">
-                <span class="nav-item-aux decoration-yellow-400/70">NOW</span>
-              </a>
-              <div class="ml-auto flex gap-4 sm:m-0 sm:w-auto sm:text-left">
-                <a href="/linkroll">
-                  <span class="nav-item-aux decoration-red-400/70">LINKROLL</span>
-                </a>
-                <a href="/misc">
-                  <span class="nav-item-aux decoration-zinc-600/70">MISC</span>
-                </a>
-              </div>
+			<a href="/now">
+			  <span class="nav-item-aux decoration-blue-500/60">NOW</span>
+			</a>
+			<a href="/linkroll">
+			  <span class="nav-item-aux decoration-red-600/60">LINKS</span>
+			</a>
+			<a href="/misc">
+			  <span class="nav-item-aux decoration-black/50">MISC</span>
+			</a>
             </nav>
           </div>
+
           <div class="mb-6">
             <div class="page-title">
               <h1>LINKROLL</h1>
             </div>
-            <p class="text-slate-600">this page will slowly, eventually, gradually, be filled</p>
+            <p class="text-slate-600">backlog of links I find interesting!</p>
           </div>
 
           <div class="pl-1 md:flex">
