--- a/src/index.html
+++ b/src/index.html
@@ -131,7 +131,7 @@
             </div>
 
             <nav
-              class="flex flex-wrap justify-end gap-x-2 border-b-3 text-[1.1em] font-bold md:mt-1 md:ml-0 md:flex-col md:gap-0 md:border-none md:font-medium"
+              class="flex flex-wrap justify-end gap-x-2 border-b-2 text-[1.1em] md:mt-1 md:ml-0 md:flex-col md:gap-0 md:border-none md:font-medium"
             >
               <a href="/blog" class="nav-item slash-green">
                 <svg class="nav-square fill-green-600/60" viewBox="0 0 10 10">
